# gpg-qr

./: MANIFEST.in  README.md  pyproject.toml  setup.py
src/gpg_qr/: README.md  __init__.py  main.py  requirements.txt  utils.py
src/gpgqr/: main.py  utils.py
