[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gpgqr"
version = "0.1.0"
description = "Generates QR codes from GPG revoke certificates."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/your-username/gpgqr"
"Bug Tracker" = "https://github.com/your-username/gpgqr/issues"
